--- a/day-2/myShop/shop/templates/shop/base.html
+++ b/day-2/myShop/shop/templates/shop/base.html
@@ -11,41 +11,8 @@
       <a href="/" class="logo">Мой интернет-магазин shop</a>
     </div>
     <div id="subheader">
-
-
-      <div class="cart">
-        {% with total_items=cart|length %}
-        {% if total_items > 0 %}
-        Your cart:
-        <a href="{% url "cart:cart_detail" %}">
-        {{ total_items }} item{{ total_items|pluralize }},
-        ${{ cart.get_total_price }}
-        </a>
-        {% else %}
-        Your cart is empty.
-        {% endif %}
-        {% endwith %}
-        
-        <div class="user-status">
-          {% if request.user.is_authenticated %}
-    <div class="user-menu">
-        <span>Привет, {{ request.user.username }}!</span>
-        <form action="{% url 'shop:logout' %}" method="post" class="logout-form">
-            {% csrf_token %}
-            <button type="submit">Выйти</button>
-        </form>
-    </div>
-{% else %}
-    <a href="{% url 'shop:login' %}">Войти</a>
-{% endif %}
-
-      </div>
-
-      </div>
-
-      
+      <div class="cart">Your cart is empty.</div>
     </div>
     <div id="content">{% block content %} {% endblock %}</div>
-   
   </body>
 </html>
