--- a/day-3/myShop/shop/templates/shop/login.html
+++ b/day-3/myShop/shop/templates/shop/login.html
@@ -1,12 +1,39 @@
 {% extends "shop/base.html" %}
 
-{% block title %}Вход{% endblock %}
+{% block title %}Вход в систему{% endblock %}
 
 {% block content %}
-    <h1>Вход в систему</h1>
-    <form method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Войти"></p>
-    </form>
+<div class="login-container">
+    <div class="login-box">
+        <h1>Вход в систему</h1>
+        {% if form.errors %}
+            <div class="error-message">
+                Пожалуйста, проверьте правильность введенных данных
+            </div>
+        {% endif %}
+        
+        <div class="login-form">
+            <form action="{% url 'shop:login' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="{{ form.username.id_for_label }}">Имя пользователя:</label>
+                    {{ form.username }}
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.password.id_for_label }}">Пароль:</label>
+                    {{ form.password }}
+                </div>
+                <input type="hidden" name="next" value="{{ next }}" />
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-primary">Войти</button>
+                </div>
+            </form>
+            
+            <div class="register-prompt">
+                <p>Еще нет аккаунта?</p>
+                <a href="{% url 'shop:register' %}" class="register-link">Зарегистрироваться</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
