--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -6,6 +6,13 @@
 
 {% block content %}
   <h1>Checkout</h1>
+  
+  {% if user.is_authenticated %}
+  <div class="user-info">
+    <p>Оформление заказа для: <strong>{{ user.username }}</strong></p>
+  </div>
+  {% endif %}
+  
   <div class="order-info">
     <h3>Your order</h3>
     <ul>
@@ -18,6 +25,7 @@
     </ul>
     <p>Total: ${{ cart.get_total_price }}</p>
   </div>
+  
   <form method="post" class="order-form">
     {{ form.as_p }}
     <p><input type="submit" value="Place order"></p>
