--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,48 +1,68 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>{% block title %}Мой интернет-магазин shop{% endblock %}</title>
+    <title>{% block title %}{% trans "My Shop" %}{% endblock %}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
+    <style>
+      .language-switcher {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+      }
+      .language-switcher select {
+        padding: 5px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+      }
+    </style>
   </head>
   <body>
     <div id="header">
-      <a href="/" class="logo">DRIP SHOP</a>
-        <div class="user-auth">
-            {% if request.user.is_authenticated %}
-                Привет, {{ request.user.username }}!
-                <a href="{% url 'shop:logout' %}">Выйти</a>
-            {% else %}
-                <a href="{% url 'shop:login' %}">Войти</a>
-                <span class="auth-separator">|</span>
-                <a href="{% url 'shop:register' %}">Регистрация</a>
-            {% endif %}
-        </div>
+      <a href="/{{ LANGUAGE_CODE }}/" class="logo">DRIP SHOP</a>
+      <div class="language-switcher">
+        <form action="/i18n/setlang/" method="post">
+          {% csrf_token %}
+          <input name="next" type="hidden" value="{{ request.path }}">
+          <select name="language" onchange="this.form.submit()">
+            {% get_current_language as CURRENT_LANGUAGE %}
+            {% get_available_languages as LANGUAGES %}
+            {% for lang_code, lang_name in LANGUAGES %}
+              <option value="{{ lang_code }}" {% if lang_code == CURRENT_LANGUAGE %}selected{% endif %}>
+                {{ lang_name }}
+              </option>
+            {% endfor %}
+          </select>
+        </form>
+      </div>
+      <div class="user-auth">
+          {% if request.user.is_authenticated %}
+              {% trans "Hello" %}, {{ request.user.username }}!
+              <a href="{% url 'shop:logout' %}">{% trans "Logout" %}</a>
+          {% else %}
+              <a href="{% url 'shop:login' %}">{% trans "Login" %}</a>
+              <span class="auth-separator">|</span>
+              <a href="{% url 'shop:register' %}">{% trans "Register" %}</a>
+          {% endif %}
+      </div>
     </div>
     <div id="subheader">
-
-
       <div class="cart">
         {% with total_items=cart|length %}
         {% if total_items > 0 %}
-        Your cart:
+        {% trans "Your cart" %}:
         <a href="{% url "cart:cart_detail" %}">
-        {{ total_items }} item{{ total_items|pluralize }},
+        {{ total_items }} {% trans "item" %}{{ total_items|pluralize }},
         ${{ cart.get_total_price }}
         </a>
         {% else %}
-        Your cart is empty.
+        {% trans "Your cart is empty." %}
         {% endif %}
         {% endwith %}
-        
-       
-
       </div>
-
-      
     </div>
     <div id="content">{% block content %} {% endblock %}</div>
-   
   </body>
 </html>
